Changed a fixed scrollbar into an automatic scrollbar

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -2,7 +2,7 @@
     width: 75%;
     margin: auto;
     height: 300px;
-    overflow: scroll;
+    overflow: auto;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
